--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -6,7 +6,11 @@
     "outDir": "./out-tsc/app",
     "types": [
       "node"
-    ]
+    ],
+    "baseUrl": "./",
+    "paths": {
+      "@accueil1/*": ["src/app/accueil1/*"]
+    }
   },
   "include": [
     "src/**/*.ts"
