--- a/angular.json
+++ b/angular.json
@@ -21,6 +21,7 @@
             "assets": [
                "src/favicon.ico",
   "src/assets",
+  "src/app/assets",
               {
                 "glob": "**/*",
                 "input": "public"
